[gd_scene load_steps=13 format=3 uid="uid://4nwch3h4c523"]

[ext_resource type="Script" path="res://scripts/join_lobby.gd" id="1_7m17b"]
[ext_resource type="Texture2D" uid="uid://cbpabvbncsrqv" path="res://assets/images/bg.png" id="2_ocxai"]
[ext_resource type="FontFile" uid="uid://0nrf8fb7tftm" path="res://assets/fonts/Lobster 1.4.otf" id="3_yv3f1"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="4_g1min"]
[ext_resource type="Texture2D" uid="uid://cbggiuv1an3vf" path="res://assets/images/rafraichir.png" id="5_d1nde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xeel"]
bg_color = Color(0.729412, 0.215686, 0.215686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j64rt"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.239216, 0.239216, 0.239216, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_teeib"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsl6c"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c848d"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.85098, 0.85098, 0.85098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cba7b"]
bg_color = Color(0.404511, 0.404511, 0.404511, 0.270588)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.403922, 0.403922, 0.403922, 0.270588)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0etuy"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.85098, 0.85098, 0.85098, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0562916, 0.0562916, 0.0562916, 0.6)

[node name="JoinLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7m17b")

[node name="BgDimming" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="JoinPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.5
offset_top = -366.0
offset_right = 321.5
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_3xeel")

[node name="BGTexture" type="TextureRect" parent="JoinPanel"]
self_modulate = Color(1, 1, 1, 0.227451)
layout_mode = 2
texture = ExtResource("2_ocxai")
expand_mode = 1
stretch_mode = 1

[node name="MainVertical" type="VBoxContainer" parent="JoinPanel"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="JoinLobbyTitle" type="Label" parent="JoinPanel/MainVertical"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_yv3f1")
theme_override_font_sizes/font_size = 70
text = "Join a Lobby!"

[node name="JoinCodeContainer" type="HBoxContainer" parent="JoinPanel/MainVertical"]
layout_mode = 2
alignment = 1

[node name="JoinByCodeLabel" type="Label" parent="JoinPanel/MainVertical/JoinCodeContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_g1min")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_j64rt")
text = "Join by code"

[node name="SpinBox" type="LineEdit" parent="JoinPanel/MainVertical/JoinCodeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/selection_color = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
max_length = 4

[node name="JoinCodeButton" type="Button" parent="JoinPanel/MainVertical/JoinCodeContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_g1min")
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_teeib")
theme_override_styles/normal = SubResource("StyleBoxFlat_tsl6c")
text = "Join"

[node name="AvailableOptions" type="HBoxContainer" parent="JoinPanel/MainVertical"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="RoomsList" type="ItemList" parent="JoinPanel/MainVertical/AvailableOptions"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25

[node name="Button" type="Button" parent="JoinPanel/MainVertical"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_g1min")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_teeib")
theme_override_styles/normal = SubResource("StyleBoxFlat_tsl6c")
text = "Create Lobby"

[node name="Close" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 283.0
offset_top = -366.0
offset_right = 322.0
offset_bottom = -317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_c848d")
text = "X"

[node name="Button2" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = 278.0
offset_right = -226.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_cba7b")
theme_override_styles/normal = SubResource("StyleBoxFlat_0etuy")
icon = ExtResource("5_d1nde")
expand_icon = true

[node name="error_label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -133.0
offset_top = 238.0
offset_right = 227.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.712129, 0.712129, 0.712129, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Lobby Not Found ! Please Verify Code"

[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
